nicer root / layout

--- a/config/services.ini
+++ b/config/services.ini
@@ -1,3 +1,8 @@
-[test]
-text=text
-command="echo TEST {text}"
+[ls]
+wildcard=*
+params=-rtl
+command=ls {params} {wildcard}
+
+[echo]
+text=`date`
+command=echo {text}
