URL or command line

--- a/config/services.ini
+++ b/config/services.ini
@@ -4,5 +4,11 @@ params=-rtl
 command=ls {params} {wildcard}
 
 [echo]
-text=`date`
-command=echo {text}
+text1=`date`
+text2=`date`
+command[1]=echo {text1}
+command[2]=echo {text2}
+command[3]=http://www.google.com
+[df]
+folder=/root
+command=/bin/df {folder}
